# babynames

./: Makefile  pyproject.toml
adapter/src/: prepare.py  submit.py
extract/hand/: list_urls.csv
extract/src/: import.py  scrape.py
extract/src/loaders/: __init__.py  quebec.py  united_states.py
