[project]
name = "babynames"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "fastparquet>=2024.11.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyprojroot>=0.3.0",
    "requests>=2.32.5",
    "storywrangler-sdk",
]

[tool.uv.sources]
storywrangler-sdk = { path = "../storywrangler/packages/sdk" }
